# Scripting_System

./: .gitignore  CMakeLists.txt  README.md  Research.md
include/Core/: App.hpp  Camera.hpp  Debug.hpp  Interface.hpp  Light.hpp  Mesh.hpp  Model.hpp  ResourcesManager.hpp  Scene.hpp  Script.hpp
include/Game/: Enemy.hpp  Entity.hpp  Explosion.hpp  Gunsmoke.hpp  Particles.hpp  Platform.hpp  Player.hpp  Weapon.hpp
project/: launcher.bat
resources/: gameovermenu.txt  level.txt  mainmenu.txt  scene.txt  winmenu.txt
source/Core/: App.cpp  Camera.cpp  Debug.cpp  Interface.cpp  Maths.cpp  Mesh.cpp  ResourcesManager.cpp  Scene.cpp  Script.cpp  Shader.cpp  Texture.cpp  main.cpp
source/Game/: Enemy.cpp  Entity.cpp  Explosion.cpp  Gunsmoke.cpp  Particles.cpp  Platform.cpp  Player.cpp  Weapon.cpp
source/Game/scripts/: Player.py
